[package]
name = "sshca"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[profile.release]
lto = true

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
base64 = "0.13"
cmd_lib = "1"
der = { version = "0.4", features = ["derive"] }
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
spki = "0.4"
sshcerts = { version = "0.4", default-features = false }
time = "0.2"
