[package]
name = "sshca"
version = "0.2.0"
edition = "2021"
license = "WTFPL"
publish = false

[profile.release]
lto = true

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
aws-config = "0.13"
aws-sdk-kms = "0.13"
camino = "1"
dotenv = "0.15"
lazy_static = "1"
pkcs1 = { version = "0.4", features = ["std"] }
spki = { version = "0.6", features = ["std"] }
sshcerts = { version = "0.11", default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
