[package]
name = "sshca"
version = "0.2.1"
edition = "2021"
license = "WTFPL"
publish = false

[profile.release]
lto = true

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
aws-config = "0.55.3"
aws-sdk-kms = "0.28.0"
camino = "1.1.6"
dotenvy = "0.15.7"
lazy_static = "1.4.0"
pkcs1 = { version = "0.7.5", features = ["std", "pkcs8"] }
spki = { version = "0.7.2", features = ["std"] }
sshcerts = { version = "0.12.0", default-features = false }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
